# etlite

./: .gitignore  README.md  pyproject.toml
docs/examples/: portfolio_management.md
src/etlite/: __init__.py  environ.py  importer.py  models.py  registry.py
src/etlite/adaptors/aws/: __init__.py  athena_adaptor.py  s3_adaptor.py
src/etlite/adaptors/gcp/: __init__.py  gs_adapter.py
src/etlite/adaptors/tradingview/: __init__.py  constants.py  retry_decorator.py  tradingview_adapter.py
src/etlite/adaptors/yahoo_finance/: __init__.py  yahoo_finance_adaptor.py
src/etlite/blenders/: __init__.py  bld_merge.py  utils.py
src/etlite/cli/: create_example.py  create_project.py  files_content.py  main.py  parse_md.py
src/etlite/extractors/: __init__.py  ext_html.py  ext_local.py  ext_s3.py  ext_tradingview.py  ext_yfinance.py
src/etlite/loaders/: __init__.py  lod_gsheets.py
src/etlite/pipes/: __init__.py  base_pipe.py  blend_pipe.py  extract_pipe.py  take_pipe.py
src/etlite/transformers/: __init__.py  base_pandas_trx.py  base_pyarrow_trx.py  trx_fillna.py  trx_filter.py  trx_keep.py  trx_pandas_custom.py  trx_rename.py
src/etlite/utils/: error_parsing.py
