[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etlite"
version = "0.1.0"
description = "A lightweight library for creating local ETL pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Broboana", email = "daniel.broboana@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=22.0.0",
    "boto3>=1.42.0",
    "requests>=2.32.0",
    "websocket-client>=1.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "gspread>=6.2.0",
    "gspread-dataframe>=4.0.0",
    "lxml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
